--- a/index.html
+++ b/index.html
@@ -1,4 +1,123 @@
 <!DOCTYPE html>
-<html>
-<p>Test text</p>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="assets/cv-icon.png" />
+
+    <title>CV</title>
+  </head>
+  <body>
+    <header class="header">
+      <ul class="nav-list">
+        <h2 class="nav-name">ALEX ZAKREVSKY</h2>
+        <li class="nav-item"><a href="#about" class="nav-link">About me</a></li>
+        <li class="nav-item">
+          <a href="#contacts" class="nav-link">Contacts</a>
+        </li>
+        <li class="nav-item">
+          <a href="#example" class="nav-link">Code example</a>
+        </li>
+        <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+        <li class="nav-item">
+          <a href="#projects" class="nav-link">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a href="#english" class="nav-link">English</a>
+        </li>
+      </ul>
+    </header>
+    <main class="main"></main>
+    <footer class="footer">
+      <div  class="footer-contents">
+        &copy 2021
+        <a id="footer-link"class="nav-link" href="https://github.com/AlexZKR">alexzkr</a>
+      </div>
+      <div class="footer-contents">
+        <a href="https://rs.school/js/" class="rss-link"></a>
+      </div>
+    </footer>
+  </body>
 </html>
+
+<!-- </head>
+  <body class="body">
+    <header class="header">
+      <nav class="nav">
+        <div class="container">
+          <ul class="nav-list">
+            <div class="container">
+              <h2 class="nav-name">
+                Alex Zakrevsky | Junior Front-End Developer
+              </h2>
+            </div>
+            <li class="nav-item">
+              <a href="#contacts" class="nav-link">Contacts</a>
+            </li>
+            <li class="nav-item">
+              <a href="#summary" class="nav-link">About me</a>
+            </li>
+            <li class="nav-item">
+              <a href="#code-example" class="nav-link">Code example</a>
+            </li>
+            <li class="nav-item">
+              <a href="#skills" class="nav-link">Skills</a>
+            </li>
+            <li class="nav-item">
+              <a href="#projects" class="nav-link">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a href="#english" class="nav-link">English</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main class="main">
+        <section class="section">
+            <img class="image" src="assets/blank-profile-picture.png" alt="profile-picture">
+
+        </section>
+      <section class="section">
+        <h2 class="section-title" id="t_contacts">Contacts:</h2>
+        <ul>
+            <li>E-mail: </li>
+            <li>Discord: </li>
+            <li>GitHub: </li>
+            <li>Tel.:</li>
+        </ul>
+      </section>
+      <section class="section">
+        <h2 class="section-title" id="t_about_me">About myself:</h2>
+        <p>
+          My name is Alex and I just love computer stuff, it has been with me
+          throught my life, and recently I found out that I love to code!
+          Algorithms writing/optimization, problem solving, coming up with the
+          most efficient way of perfoming a task and constant learning - this is
+          what I am all about right now. By the way, I have a 5 year experience
+          of video montage/photo editing and coding is a new page, not to say a
+          book, in my career. I try to learn as much as I can and from as many
+          different sources as there are available. My main task for now is to
+          choose my future specification in IT, so I`m looking forward to learn
+          front-end in RS School!
+        </p>
+      </section>
+      <section class="section">
+        <h2 class="section-title" id="t_code">Code Example:</h2>
+      </section>
+      <section class="section">
+        <h2 class="section-title" id="t_skills">Skills:</h2>
+      </section>
+      <section class="section">
+        <h2 class="section-title" id="t_projects">Projects:</h2>
+      </section>
+      <section class="section">
+        <h2 class="section-title" id="t_endglish">English:</h2>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="contaier"></div>
+    </footer>
+  </body> -->
